--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9",
         "php-open-source-saver/jwt-auth": "^2.3",
+        "spatie/laravel-query-builder": "^6.3",
         "spatie/laravel-translatable": "^6.10",
         "symfony/http-client": "^7.2",
         "symfony/mailgun-mailer": "^7.2"
